; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/extr_mwl8k.c_mwl8k_tid_queue_mapping.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/extr_mwl8k.c_mwl8k_tid_queue_mapping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IEEE80211_AC_BE = common dso_local global i32 0, align 4
@IEEE80211_AC_BK = common dso_local global i32 0, align 4
@IEEE80211_AC_VI = common dso_local global i32 0, align 4
@IEEE80211_AC_VO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @mwl8k_tid_queue_mapping to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mwl8k_tid_queue_mapping(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp sgt i32 %4, 7
  %6 = zext i1 %5 to i32
  %7 = call i32 @BUG_ON(i32 %6)
  %8 = load i32, i32* %3, align 4
  switch i32 %8, label %17 [
    i32 0, label %9
    i32 3, label %9
    i32 1, label %11
    i32 2, label %11
    i32 4, label %13
    i32 5, label %13
    i32 6, label %15
    i32 7, label %15
  ]

9:                                                ; preds = %1, %1
  %10 = load i32, i32* @IEEE80211_AC_BE, align 4
  store i32 %10, i32* %2, align 4
  br label %18

11:                                               ; preds = %1, %1
  %12 = load i32, i32* @IEEE80211_AC_BK, align 4
  store i32 %12, i32* %2, align 4
  br label %18

13:                                               ; preds = %1, %1
  %14 = load i32, i32* @IEEE80211_AC_VI, align 4
  store i32 %14, i32* %2, align 4
  br label %18

15:                                               ; preds = %1, %1
  %16 = load i32, i32* @IEEE80211_AC_VO, align 4
  store i32 %16, i32* %2, align 4
  br label %18

17:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %15, %13, %11, %9
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @BUG_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
